--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="welcome">
             <h2>Hi, I'm <span style="color:gold">Christian</span>.</h2>
-            <p style="margin:0.4em">A CompSci major concentrating in Data Science & AI. Minoring in Math.</p>
+            <p>A CompSci major concentrating in Data Science & AI. Minoring in Math.</p>
         </div>
         <div class="about">
             <p>Lots of things.</p>
