--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             </div>
         </div>
         <div class="welcome">
-            <h2>Hi, I'm <span style="color:gold">Christian</span>.</h2>
-            <p>A CompSci major concentrating in Data Science & AI. Minoring in Math.</p>
+            <h2>Hi, I'm <span style="color:gold">Christian Rawley</span>.</h2>
+            <p>An aspiring software engineer with a love of all things tech-related. Seriously.</p>
         </div>
         <div class="about">
             <p>Lots of things.</p>
