delete title if width too small

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="welcome">
             <h2>Hi, I'm <span style="color:gold">Christian Rawley</span>.</h2>
-            <p>An aspiring software engineer with a love of all things tech-related. Seriously.</p>
+            <p>An aspiring software engineer with a love of all things tech-related.</p>
         </div>
         <div class="about">
             <p>Lots of things.</p>
