--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Christian Rawley | Portfolio</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="topbar">
-            <h2>Portfolio</h2>
-            <div class="topbar_holder">
-                <p>Projects</p>
-                <p>Contact</p>
+<head>
+    <title>Christian Rawley | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="left-content">
+            <div class="profile">
+                <img class="img" src="pfp.jpg">
+                <h2>Christian Rawley</h2>
+                <p>Aspiring software engineer studying computer science at UAFS, interning at Simmons Foods as a full-stack software developer.</p>
+                <p style="border-radius: 12px; border-style: solid; border-width: 2px; border-color: rgb(139, 139, 139); padding: 8px; margin-top: 8px; font-size: 16px; font-family: Cambria; background-color:lightgray">Request Resume</p>
+            </div>
+            <div class="contact">
+                <p>Based in Fort Smith, Arkansas</p>
+                <hr style="width:100%">
+                <p>LinkedIn</p>
+                <hr style="width:100%">
+                <p>Github</p>
+                <hr style="width:100%">
+                <p>X (Twitter)</p>
+                <hr style="width:100%">
+                <p>Email</p>
             </div>
         </div>
-        <div class="welcome">
-            <h2>Hi, I'm <span style="color:gold">Christian Rawley</span>.</h2>
-            <p>An aspiring software engineer with a love of all things tech-related.</p>
+        <div class="middle-content">
+            <p>something here as well...</p>
         </div>
-        <div class="about">
-            <p>Lots of things.</p>
-        </div>
-    </body>
+    </div>
+</body>
 </html>
