--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="middle-content">
-            <p>something here as well...</p>
+            <p>added viewport</p>
         </div>
     </div>
 </body>
