--- a/index.html
+++ b/index.html
@@ -1,34 +1,80 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Christian Rawley | Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="left-content">
-            <div class="profile">
-                <img class="img" src="pfp.jpg">
-                <h2>Christian Rawley</h2>
-                <p>Aspiring software engineer studying computer science at UAFS, interning at Simmons Foods as a full-stack software developer.</p>
-                <p style="border-radius: 12px; border-style: solid; border-width: 2px; border-color: rgb(139, 139, 139); padding: 8px; margin-top: 8px; font-size: 16px; font-family: Cambria; background-color:lightgray">Request Resume</p>
-            </div>
-            <div class="contact">
-                <p>Based in Fort Smith, Arkansas</p>
-                <hr style="width:100%">
-                <p>LinkedIn</p>
-                <hr style="width:100%">
-                <p>Github</p>
-                <hr style="width:100%">
-                <p>X (Twitter)</p>
-                <hr style="width:100%">
-                <p>Email</p>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Christian Rawley's portfolio showcasing software engineering projects and skills.">
+        <title>Christian Rawley | Portfolio</title>
+        <link rel="stylesheet" href="style.css"> 
+    </head>
+    <body>
+        <div class="container">
+
+            <!-- Profile Container -->
+             <div class="profile-container">
+                <img src="pfp.jpg" alt="profile picture">
+                <h1>Christian Rawley</h1>
+                <h2>CS & Math @ UAFS | Student Assistant</h2>
+                <p>Aspiring software engineer studying computer science at UAFS. Prospective full-stack developer intern at Simmons Foods.
+
+                </p>
+                <div class="profile-contacts">
+                    <a href="https://www.github.com/ChristianRawley"><img src="github.png" alt="github link"></a>
+                    <a href="https://www.linkedin.com/in/christian-rawley"><img src="linkedin.png" alt="linkedin link"></a>
+                    <a href="https://www.x.com/ChristianRawley"><img src="x.png" alt="x link"></a>
+                    <a href="mailto:christianrawley0@gmail.com"><img src="email.png" alt="email link"></a>
+                </div>
+             </div>
+
+             <!-- Main Container -->
+              <div class="main-container">
+
+                <!-- Experience -->
+                <div class="experience-container">
+                    <h2 style="font-size: 24px;">Experience</h2>
+                    <div class="experience">
+                        <h4>August 2024 &mdash; Present</h4>
+                        <h2>Student Assistant &middot; UAFS</h2>
+                        <p>Assisted students with inquiries and supported academic advisors with paperwork and appointments. Handled document organization, including filing, shredding, and data entry into Banner and Navigate. Maintained a welcoming and organized front desk environment.</p>
+                    </div>
+                    <div class="experience">
+                        <h4>May 2023 &mdash; August 2024</h4>
+                        <h2>Crew Member &middot; McDonald's</h2>
+                        <p>Dedicated team member in a fast-paced customer service environment. Provided efficient and accurate service while preparing orders.</p>
+                    </div>
+                </div>
+                
+
+                <!-- Projects -->
+                <div class="project-container">
+                    <h2 style="font-size: 24px;">Projects</h2>
+                    <div class="project">
+                        <h2>My Numa</h2>
+                        <div class="skills">
+                            <p>JavaScript</p>
+                            <p>React.js</p>
+                            <p>Cheerio</p>
+                            <p>Axiom</p>
+                            <p>Node.js</p>
+                        </div>
+                        <p>Implemented data scraping with Cheerio for real-time updates from university resources. Designed a user-friendly interface with React Native to streamline access to campus information</p>
+                        <div style="margin-top: 8px; display: flex;">
+                            <a href="https://github.com/ChristianRawley/NumaBot" style="background-color: #36454F; padding: 8px; color: white; text-decoration: none; border-radius: 8px; font-size: 20px;">View Project</a>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <h2>Resist the Unknown</h2>
+                        <div class="skills">
+                            <p>C#</p>
+                            <p>Unity</p>
+                        </div>
+                        <p>Rebuilt my award-winning video game transitioning from GameSalad to enhance gameplay and user experience by implementing a dynamic tower placement system and resolving numerous legacy bugs. The view project button will take you to the old version.</p>
+                        <div style="margin-top: 8px; display: flex;">
+                            <a href="https://gamesalad.com/featured-student-games/resist-the-unknown/" style="background-color: #36454F; padding: 8px; color: white; text-decoration: none; border-radius: 8px; font-size: 20px;">View Project</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="middle-content">
-            <p>added viewport</p>
-        </div>
-    </div>
-</body>
+    </body>
 </html>
