added request resume button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                 <img src="pfp.jpg" alt="profile picture">
                 <h1>Christian Rawley</h1>
                 <h2>CS & Math @ UAFS | Student Assistant</h2>
-                <p>Aspiring software engineer studying computer science at UAFS. Prospective full-stack developer intern at Simmons Foods.
-
+                <p>Aspiring software engineer studying computer science at UAFS. Prospective full-stack developer intern at Simmons Foods
                 </p>
                 <div class="profile-contacts">
                     <a href="https://www.github.com/ChristianRawley"><img src="github.png" alt="github link"></a>
@@ -24,6 +23,7 @@
                     <a href="https://www.x.com/ChristianRawley"><img src="x.png" alt="x link"></a>
                     <a href="mailto:christianrawley0@gmail.com"><img src="email.png" alt="email link"></a>
                 </div>
+                <a href="mailto:christianrawley0@gmail.com" style="text-decoration: none; color: white; font-size: 20px; padding: 8px; border-style: solid; border-width: 2px; border-radius: 12px; background-color: #36454f">Request Resume</a>
              </div>
 
              <!-- Main Container -->
